k8s/two-tier-app-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: two-tier-app
  labels:
    app: two-tier-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: two-tier-app

  template:
    metadata:
      labels:
        app: two-tier-app

    spec:
      containers:
        - name: two-tier-app
          image: maheshshillare/two-tier-flask-app:latest

          ports:
            - containerPort: 5000

          imagePullPolicy: Always

          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
