k8s/two-tier-app-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: two-tier-app-ingress

spec:
  ingressClassName: traefik

  rules:
  - host: two-tier-app.local

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: two-tier-app-svc
            port:
              number: 80
